[tool.poetry]
name = "tamer"
version = "1.0.0"
description = "Python library for working with asynchronous programs."
authors = ["Sebastian Wallkötter <sebastian@wallkoetter.net>"]
license = "BSD 3-clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
croniter = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
